updated about page, fixed nav, fixed footer alignment in index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,6 @@
   margin-right: 2rem;
 }
 
-/* .navbar-toggler {
-  margin-left: -50px;
-} */
-
 .navbar-light .navbar-text {
   font-family: 'Lato', sans-serif;
   color: #454545;
@@ -26,6 +22,7 @@
 
 .addTripLink:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
 /* naviation link effects */
@@ -70,7 +67,12 @@
 }
 
 .login-bg {
-  background-image: url(../images/backgrounds/login-bg-1.jpeg)
+  background-image: url(../images/backgrounds/login-bg-1.jpeg);
+}
+
+.about-bg {
+  background-image: url(../images/backgrounds/about-bg-1.jpeg);
+  background-position: 50% 18%;
 }
 
 .login-heading {
@@ -84,6 +86,22 @@
   background-color: rgba(0, 0, 0, 0.4);
   padding: 1rem;
   width: 100%;
+}
+
+.about-heading {
+  font-size: 2.5rem;
+  color: #FFFF;
+  font-family: 'Abril Fatface', cursive;
+  padding-top: 150px;
+}
+
+.about-heading-text {
+  font-family: 'Lato', sans-serif;
+  color: #FFFF;
+  font-size: 1rem;
+  width: 50%;
+  margin: auto;
+  padding-bottom: 150px;
 }
 
 .jumbotron {
@@ -150,7 +168,7 @@ p {
   width: 100%;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -52%);
 }
 
 .btn-sm {
@@ -183,7 +201,7 @@ p {
    height: 400px;
 }
 
-#map {
+.map {
   width: 100%;
   height: 400px;
   background-color: grey;
@@ -216,7 +234,7 @@ p {
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
@@ -226,13 +244,14 @@ p {
   font-size: 0.8rem;
   font-family: 'Lato', sans-serif;
   color: #009FDC;
+  height: 3rem;
 }
 
 .wrapper {
   position: relative;
   margin: auto;
   width: 100%;
-  min-height: calc(100vh - 3rem);
+  min-height: calc(100vh - 4rem);
 }
 
 
